# ayt-translator

./: .gitignore  LICENSE  README.md  dictionary.db  package.json  shell.nix  userscript.js
public/: i18n.en.json  i18n.zh.json
server/: Cargo.toml  dictionary.db  package.json  tsconfig.json
server/src/: api.rs  config.rs  db.rs  db.ts  main.rs  regex.rs  schema.rs  server.ts
server/src/core/: baidu.ts  google.ts  jbeijing.ts  translator.ts
server/src/translator/: baidu.rs  deepl.rs  dictionary.rs  google.rs  microsoft.rs  mod.rs
src/: App.tsx  schema.ts  server.ts
src/core/: baidu.ts  dictionary.ts  microsoft.ts  regex.ts
src/ui/: FilterList.tsx  TermEditor.tsx  TermList.tsx  TermManager.tsx  Tester.tsx
web/: package.json  tsconfig.json  vite.config.ts
web/public/: i18n.en.json  i18n.zh.json
web/src/: App.css  App.tsx  contexts.json  index.tsx
web/src/ui/: FilterList.tsx  TermEditor.tsx  TermList.tsx  TermManager.tsx  Tester.tsx
