[package]
name = "ayt-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.7", features = ["full"] }
tokio-stream = { version = "0.1.6" }
warp = "0.3"
regex = "1.5"
rustbreak = { version = "2", features = ["other_errors"] }
once_cell = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
fancy-regex = "0.6"
async-trait = "0.1.50"
arcstr = "1.1"
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
rand = { version = "0.8", optional = true }
md5 = { version = "0.7", optional = true }

[features]
google = []
baidu = ["rand", "md5"]
microsoft = []
default = ["google", "baidu", "microsoft"]
